# Pulse_Sink_Control_Webapp

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  style.css  testing.js  ui_control.js
src/: lib.rs
src/pulse/: mod.rs  pactl_list_format.rs  sink.rs  source.rs  tests.rs
src/pulse/pactl_list_format/: mod.rs  parse_pactl_list_output_tests.rs  parse_single_object_tests.rs
src/pulse/pulse_object/: mod.rs  sink.rs  source.rs
src/pulse/tests/: mod.rs  pactl_list_format_tests.rs  sink_tests.rs  source_tests.rs
