[package]
name = "pulse_sink_control_webapp"
description = "A small piece of software to generate pulse audio terminal commands for creating/connecting/destroying sinks. More of a hobby project/excuse to learn rust than anything else."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
regex = "1"
